--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Portfolio - Sfondo 3D Dinamico</title>
   <style>
     html, body {
       margin: 0;
@@ -13,7 +13,7 @@
       color: white;
       font-family: Arial, sans-serif;
     }
-
+    /* Il canvas copre tutto lo schermo e sta sotto i contenuti */
     canvas {
       position: fixed;
       top: 0;
@@ -22,7 +22,6 @@
       height: 100%;
       z-index: -1;
     }
-
     section {
       padding: 100px 20px;
       text-align: center;
@@ -30,29 +29,24 @@
       margin: 0;
       transition: background 0.3s ease;
     }
-
     section:hover {
       background: rgba(0, 0, 0, 0.85);
     }
-
     h1, h2, h3 {
       color: #00f;
       margin-bottom: 20px;
     }
-
     select {
       padding: 10px;
       font-size: 16px;
       margin-bottom: 20px;
     }
-
     .project-group {
       margin-top: 1rem;
       padding: 1rem;
       border: 1px solid #444;
       border-radius: 10px;
     }
-
     .project img {
       width: 200px;
       margin: 10px;
@@ -60,25 +54,20 @@
       cursor: pointer;
       transition: transform 0.3s ease;
     }
-
     .project img:hover {
       transform: scale(1.05);
       box-shadow: 0 0 15px #00f;
     }
-
     #popup {
       position: fixed;
       display: none;
-      top: 0; 
-      left: 0;
-      width: 100%; 
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background-color: rgba(0, 0, 0, 0.9);
       justify-content: center;
       align-items: center;
       z-index: 1000;
     }
-
     #popup img {
       max-width: 90%;
       max-height: 90%;
@@ -87,7 +76,8 @@
   </style>
 </head>
 <body>
-  <!-- Il canvas per lo sfondo 3D -->
+
+  <!-- Canvas per lo sfondo 3D -->
   <canvas id="stars"></canvas>
 
   <section id="home">
@@ -156,10 +146,12 @@
     <img id="popup-img" src="" alt="Animazione progetto">
   </div>
 
-  <!-- Importa Three.js da CDN -->
+  <!-- Importa Three.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
-    // Inizializziamo il renderer usando il canvas già presente
+    // UTILIZZO DI THREE.JS PER UN SFONDO 3D DINAMICO
+
+    // Otteniamo il canvas e creiamo il renderer WebGL
     const canvas = document.getElementById('stars');
     const renderer = new THREE.WebGLRenderer({
       canvas: canvas,
@@ -169,59 +161,75 @@
     renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize(window.innerWidth, window.innerHeight);
 
-    // Creazione della scena e della camera
+    // Creiamo la scena e la camera
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.z = 1;
+    const camera = new THREE.PerspectiveCamera(
+      75, window.innerWidth / window.innerHeight, 1, 2000);
+    camera.position.z = 100;
 
-    // Creazione di un sistema di particelle (stelle) distribuite in uno spazio 3D
-    const starGeometry = new THREE.BufferGeometry();
-    const starMaterial = new THREE.PointsMaterial({ color: 0xffffff, size: 0.7 });
-    const starVertices = [];
+    // Creazione di un sistema di particelle (stelle)
     const starCount = 10000;
-
+    const positions = new Float32Array(starCount * 3);
     for (let i = 0; i < starCount; i++) {
-      const x = THREE.MathUtils.randFloatSpread(600);
-      const y = THREE.MathUtils.randFloatSpread(600);
-      const z = THREE.MathUtils.randFloatSpread(600);
-      starVertices.push(x, y, z);
+      const i3 = i * 3;
+      positions[i3]     = THREE.MathUtils.randFloatSpread(600);
+      positions[i3 + 1] = THREE.MathUtils.randFloatSpread(600);
+      positions[i3 + 2] = THREE.MathUtils.randFloatSpread(600);
     }
-    starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-    const stars = new THREE.Points(starGeometry, starMaterial);
-    scene.add(stars);
+    const starGeometry = new THREE.BufferGeometry();
+    starGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    const starMaterial = new THREE.PointsMaterial({
+      color: 0xffffff,
+      size: 0.7,
+      sizeAttenuation: true
+    });
+    const starField = new THREE.Points(starGeometry, starMaterial);
+    scene.add(starField);
 
-    // Effetto parallax: la posizione della camera reagisce al movimento del mouse
+    // (Opzionale) Aggiunta di un cubo rotante per evidenziare la profondità
+    const cubeGeometry = new THREE.BoxGeometry(20, 20, 20);
+    const cubeMaterial = new THREE.MeshNormalMaterial();
+    const cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+    cube.position.set(0, 0, 0);
+    // Se preferisci vedere anche il cubo, rimuovi il commento alla seguente riga:
+    // scene.add(cube);
+
+    // Variabili per l'effetto parallax con il mouse
     let mouseX = 0, mouseY = 0;
     document.addEventListener('mousemove', (event) => {
-      mouseX = (event.clientX - window.innerWidth / 2);
-      mouseY = (event.clientY - window.innerHeight / 2);
+      mouseX = event.clientX - window.innerWidth / 2;
+      mouseY = event.clientY - window.innerHeight / 2;
     });
 
-    // Aggiornamento del canvas per le variazioni di dimensione della finestra
+    // Aggiornamento delle dimensioni in caso di resize
     window.addEventListener('resize', () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
 
-    // Loop di animazione
+    // Loop di animazione: effetto movimento della camera e rotazione dello sfondo
     function animate() {
       requestAnimationFrame(animate);
 
-      // Transizione graduale nella posizione della camera per l'effetto parallax
-      camera.position.x += ((mouseX * 0.001) - camera.position.x) * 0.05;
-      camera.position.y += ((-mouseY * 0.001) - camera.position.y) * 0.05;
+      // Effetto parallax: la camera segue leggermente il movimento del mouse
+      camera.position.x += ((mouseX / 100) - camera.position.x) * 0.05;
+      camera.position.y += ((-mouseY / 100) - camera.position.y) * 0.05;
       camera.lookAt(scene.position);
 
-      // Leggera rotazione delle stelle per rendere l'effetto "in movimento"
-      stars.rotation.x += 0.0005;
-      stars.rotation.y += 0.0005;
+      // Rotazione della costellazione per accentuare il senso di 3D
+      starField.rotation.x += 0.0008;
+      starField.rotation.y += 0.0008;
 
+      // (Opzionale) Rotazione del cubo
+      // cube.rotation.x += 0.005;
+      // cube.rotation.y += 0.005;
+      
       renderer.render(scene, camera);
     }
     animate();
 
-    // Funzione per visualizzare i progetti in base alla selezione dello strumento
+    // FUNZIONALITÀ DEL PORTFOLIO (progetti e popup)
     function showProjects() {
       const software = document.getElementById('software-select').value;
       document.querySelectorAll('.project-group').forEach(group => {
@@ -231,15 +239,12 @@
         document.getElementById(`${software}-projects`).style.display = 'block';
       }
     }
-
-    // Funzioni per la gestione del popup delle immagini dei progetti
     function showPopup(src) {
       const popup = document.getElementById("popup");
       const popupImg = document.getElementById("popup-img");
       popupImg.src = src;
       popup.style.display = "flex";
     }
-
     function hidePopup() {
       document.getElementById("popup").style.display = "none";
       document.getElementById("popup-img").src = "";
