--- a/index.html
+++ b/index.html
@@ -1,86 +1,105 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
       padding: 0;
       overflow-x: hidden;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
+      background: #000;
+      font-family: 'Poppins', sans-serif;
+      color: #e0e0ff;
     }
 
     canvas {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
       z-index: -1;
     }
 
     section {
       padding: 100px 20px;
       text-align: center;
-      background: rgba(0, 0, 0, 0.6);
+      background-color: rgba(10, 10, 30, 0.75);
       margin: 0;
       transition: background 0.3s ease;
+      border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
     section:hover {
-      background: rgba(0, 0, 0, 0.85);
+      background-color: rgba(10, 10, 30, 0.9);
     }
 
     h1, h2, h3 {
-      color: #00f;
+      color: #00bfff;
       margin-bottom: 20px;
     }
 
+    p {
+      font-size: 18px;
+    }
+
     select {
-      padding: 10px;
+      padding: 12px 16px;
       font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      background: #222;
+      color: #00bfff;
       margin-bottom: 20px;
+      transition: all 0.3s;
+    }
+
+    select:hover {
+      background: #333;
     }
 
     .project-group {
       margin-top: 1rem;
       padding: 1rem;
+      background-color: rgba(255,255,255,0.05);
       border: 1px solid #444;
-      border-radius: 10px;
+      border-radius: 16px;
+      box-shadow: 0 0 10px #00bfff30;
     }
 
     .project img {
       width: 200px;
       margin: 10px;
-      border-radius: 8px;
+      border-radius: 12px;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s;
+      box-shadow: 0 0 5px rgba(0, 191, 255, 0.3);
     }
 
     .project img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00f;
+      transform: scale(1.08);
+      box-shadow: 0 0 20px #00bfff;
     }
 
     #popup {
       position: fixed;
       display: none;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.95);
       justify-content: center;
       align-items: center;
-      z-index: 1000;
+      z-index: 999;
     }
 
     #popup img {
       max-width: 90%;
       max-height: 90%;
-      border-radius: 12px;
+      border-radius: 16px;
+      box-shadow: 0 0 30px #00bfff;
     }
   </style>
 </head>
@@ -99,6 +118,7 @@
 <section id="progetti">
   <h2>Progetti</h2>
   <label for="software-select">Scegli un software:</label>
+  <br/>
   <select id="software-select" onchange="showProjects()">
     <option value="">-- Seleziona --</option>
     <option value="blender">Blender</option>
@@ -140,8 +160,12 @@
   const numStars = 100;
   let mouse = { x: 0, y: 0 };
 
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  function resizeCanvas() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  }
+  resizeCanvas();
+  window.addEventListener('resize', resizeCanvas);
 
   for (let i = 0; i < numStars; i++) {
     stars.push({
@@ -163,7 +187,7 @@
     for (let star of stars) {
       let dx = star.x - mouse.x;
       let dy = star.y - mouse.y;
-      let dist = Math.sqrt(dx*dx + dy*dy);
+      let dist = Math.sqrt(dx * dx + dy * dy);
       if (dist < 100) {
         let force = (100 - dist) / 100;
         let angle = Math.atan2(dy, dx);
