--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Progetti</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background: black;
+      color: white;
       overflow-x: hidden;
-      background: #000;
-      font-family: 'Poppins', sans-serif;
-      color: #e0e0ff;
     }
 
     canvas {
@@ -22,210 +20,190 @@
       z-index: -1;
     }
 
-    section {
-      padding: 100px 20px;
+    .section {
+      padding: 100px 20px 60px;
       text-align: center;
-      background-color: rgba(10, 10, 30, 0.75);
-      margin: 0;
-      transition: background 0.3s ease;
-      border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    section:hover {
-      background-color: rgba(10, 10, 30, 0.9);
-    }
-
-    h1, h2, h3 {
-      color: #00bfff;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
+    h2 {
+      color: #00f;
+      margin-bottom: 30px;
+      font-size: 40px;
     }
 
     select {
       padding: 12px 16px;
-      font-size: 16px;
+      font-size: 18px;
+      margin-bottom: 30px;
+      background: #111;
+      color: #00f;
+      border: 2px solid #00f;
       border-radius: 8px;
-      border: none;
-      background: #222;
-      color: #00bfff;
-      margin-bottom: 20px;
-      transition: all 0.3s;
+      transition: all 0.3s ease;
     }
-
     select:hover {
-      background: #333;
+      background: #222;
+      box-shadow: 0 0 10px #00f;
+      cursor: pointer;
     }
 
     .project-group {
-      margin-top: 1rem;
-      padding: 1rem;
-      background-color: rgba(255,255,255,0.05);
-      border: 1px solid #444;
-      border-radius: 16px;
-      box-shadow: 0 0 10px #00bfff30;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
     }
 
     .project img {
-      width: 200px;
-      margin: 10px;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s;
-      box-shadow: 0 0 5px rgba(0, 191, 255, 0.3);
+      width: 260px;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      border: 2px solid #00f;
+      padding: 5px;
     }
 
     .project img:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 20px #00bfff;
+      transform: rotateY(10deg) rotateX(10deg) scale(1.1);
+      box-shadow: 0 0 25px #00f;
     }
 
-    #popup {
-      position: fixed;
+    .modal {
       display: none;
-      top: 0;
+      position: fixed;
+      z-index: 10;
       left: 0;
+      top: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.95);
+      background-color: rgba(0, 0, 0, 0.9);
       justify-content: center;
       align-items: center;
-      z-index: 999;
     }
 
-    #popup img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 16px;
-      box-shadow: 0 0 30px #00bfff;
+    .modal video {
+      max-width: 80vw;
+      max-height: 80vh;
+    }
+
+    .modal.show {
+      display: flex;
+    }
+
+    .close-btn {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 30px;
+      color: white;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-<canvas id="stars"></canvas>
+  <canvas id="starCanvas"></canvas>
 
-<section id="home">
-  <h1>Benvenuto nel mio Portfolio</h1>
-</section>
+  <section class="section" id="progetti">
+    <h2>Progetti</h2>
+    <label for="softwareSelect">Seleziona Software:</label>
+    <select id="softwareSelect">
+      <option value="">-- Seleziona --</option>
+      <option value="blender">Blender</option>
+    </select>
 
-<section id="competenze">
-  <h2>Competenze</h2>
-  <p>Blender, Photoshop, Illustrator, After Effects, Premiere</p>
-</section>
-
-<section id="progetti">
-  <h2>Progetti</h2>
-  <label for="software-select">Scegli un software:</label>
-  <br/>
-  <select id="software-select" onchange="showProjects()">
-    <option value="">-- Seleziona --</option>
-    <option value="blender">Blender</option>
-    <option value="photoshop">Photoshop</option>
-    <option value="illustrator">Illustrator</option>
-    <option value="aftereffects">After Effects</option>
-    <option value="premiere">Premiere</option>
-  </select>
-  <div id="projects-container">
-    <div class="project-group" id="blender-projects" style="display: none;">
-      <h3>Progetti realizzati con Blender</h3>
-      <div class="project"><img src="spherelumsimg.jpg" alt="Spherelums" onclick="showPopup('spherelumsvdo.gif')"></div>
-      <div class="project"><img src="tazzinaimg.jpg" alt="Tazzina" onclick="showPopup('tazzinavdo.gif')"></div>
-      <div class="project"><img src="rubikimg.jpg" alt="Rubik" onclick="showPopup('rubikvdo.gif')"></div>
-      <div class="project"><img src="magicimg.jpg" alt="Magic" onclick="showPopup('magicvdo.gif')"></div>
-      <div class="project"><img src="pallaimg.jpg" alt="Palla" onclick="showPopup('pallavdo.gif')"></div>
-      <div class="project"><img src="wtrimg.jpg" alt="Wtr" onclick="showPopup('wtrvdo.gif')"></div>
+    <div id="blender" class="project-group" style="display: none;">
+      <div class="project">
+        <img src="spherelumsvdo.jpg" data-video="spherelumsvdo.mp4" alt="Spherelum">
+      </div>
+      <div class="project">
+        <img src="tazzinavdo.jpg" data-video="tazzinavdo.mp4" alt="Tazzina">
+      </div>
+      <div class="project">
+        <img src="rubikvdo.jpg" data-video="rubikvdo.mp4" alt="Rubik">
+      </div>
+      <div class="project">
+        <img src="magicvdo.jpg" data-video="magicvdo.mp4" alt="Magic">
+      </div>
+      <div class="project">
+        <img src="pallavdo.jpg" data-video="pallavdo.mp4" alt="Palla">
+      </div>
+      <div class="project">
+        <img src="wtrvdo.jpg" data-video="wtrvdo.mp4" alt="Water">
+      </div>
     </div>
-    <div class="project-group" id="photoshop-projects" style="display: none;"><h3>Progetti Photoshop</h3></div>
-    <div class="project-group" id="illustrator-projects" style="display: none;"><h3>Progetti Illustrator</h3></div>
-    <div class="project-group" id="aftereffects-projects" style="display: none;"><h3>Progetti After Effects</h3></div>
-    <div class="project-group" id="premiere-projects" style="display: none;"><h3>Progetti Premiere</h3></div>
+  </section>
+
+  <div class="modal" id="videoModal">
+    <span class="close-btn" id="closeModal">&times;</span>
+    <video id="modalVideo" controls></video>
   </div>
-</section>
 
-<section id="contatti">
-  <h2>Contatti</h2>
-  <p>Email: esempio@email.com</p>
-</section>
+  <script>
+    const canvas = document.getElementById('starCanvas');
+    const ctx = canvas.getContext('2d');
+    const stars = [];
+    const numStars = 500;
 
-<div id="popup" onclick="hidePopup()">
-  <img id="popup-img" src="" alt="Animazione progetto">
-</div>
-
-<script>
-  const canvas = document.getElementById('stars');
-  const ctx = canvas.getContext('2d');
-  let stars = [];
-  const numStars = 100;
-  let mouse = { x: 0, y: 0 };
-
-  function resizeCanvas() {
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
-  }
-  resizeCanvas();
-  window.addEventListener('resize', resizeCanvas);
 
-  for (let i = 0; i < numStars; i++) {
-    stars.push({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      radius: Math.random() * 1.5,
-      vx: 0,
-      vy: 0
-    });
-  }
+    for (let i = 0; i < numStars; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        z: Math.random() * canvas.width,
+        radius: Math.random() * 1.5 + 0.5
+      });
+    }
 
-  window.addEventListener('mousemove', e => {
-    mouse.x = e.clientX;
-    mouse.y = e.clientY;
-  });
+    function animateStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let star of stars) {
+        star.z -= 1;
+        if (star.z <= 0) {
+          star.z = canvas.width;
+          star.x = Math.random() * canvas.width;
+          star.y = Math.random() * canvas.height;
+        }
+        let k = 128.0 / star.z;
+        let x = (star.x - canvas.width / 2) * k + canvas.width / 2;
+        let y = (star.y - canvas.height / 2) * k + canvas.height / 2;
+        let radius = star.radius * k;
 
-  function animateStars() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    for (let star of stars) {
-      let dx = star.x - mouse.x;
-      let dy = star.y - mouse.y;
-      let dist = Math.sqrt(dx * dx + dy * dy);
-      if (dist < 100) {
-        let force = (100 - dist) / 100;
-        let angle = Math.atan2(dy, dx);
-        star.vx += Math.cos(angle) * force;
-        star.vy += Math.sin(angle) * force;
+        ctx.beginPath();
+        ctx.arc(x, y, radius, 0, Math.PI * 2);
+        ctx.fillStyle = 'white';
+        ctx.fill();
       }
-      star.vx *= 0.95;
-      star.vy *= 0.95;
-      star.x += star.vx;
-      star.y += star.vy;
-      ctx.beginPath();
-      ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
-      ctx.fillStyle = 'white';
-      ctx.fill();
+      requestAnimationFrame(animateStars);
     }
-    requestAnimationFrame(animateStars);
-  }
-  animateStars();
+    animateStars();
 
-  function showProjects() {
-    const software = document.getElementById('software-select').value;
-    document.querySelectorAll('.project-group').forEach(group => group.style.display = 'none');
-    if (software) {
-      document.getElementById(`${software}-projects`).style.display = 'block';
-    }
-  }
+    const softwareSelect = document.getElementById('softwareSelect');
+    softwareSelect.addEventListener('change', function () {
+      const groups = document.querySelectorAll('.project-group');
+      groups.forEach(group => group.style.display = 'none');
 
-  function showPopup(src) {
-    const popup = document.getElementById("popup");
-    const popupImg = document.getElementById("popup-img");
-    popupImg.src = src;
-    popup.style.display = "flex";
-  }
+      const selected = this.value;
+      if (selected) {
+        document.getElementById(selected).style.display = 'flex';
+      }
+    });
 
-  function hidePopup() {
-    document.getElementById("popup").style.display = "none";
-    document.getElementById("popup-img").src = "";
-  }
-</script>
+    const modal = document.getElementById('videoModal');
+    const modalVideo = document.getElementById('modalVideo');
+    const closeModal = document.getElementById('closeModal');
+
+    document.querySelectorAll('.project img').forEach(img => {
+      img.addEventListener('click', () => {
+        modalVideo.src = img.dataset.video;
+        modal.classList.add('show');
+      });
+    });
+
+    closeModal.addEventListener('click', () => {
+      modal.classList.remove('show');
+      modalVideo.pause();
+      modalVideo.currentTime = 0;
+    });
+  </script>
 </body>
 </html>
