--- a/index.html
+++ b/index.html
@@ -1,207 +1,179 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Portfolio di KanekiGhoul-dev</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: #000;
+      color: #00bfff;
       overflow-x: hidden;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
+      position: relative;
     }
 
-    canvas {
+    .animated-bg {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 200%;
+      height: 200%;
+      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
+      background-size: cover;
+      animation: moveBg 120s linear infinite;
       z-index: -1;
+      opacity: 0.3;
     }
 
-    section {
-      padding: 100px 20px;
+    @keyframes moveBg {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(-500px, -500px); }
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem;
+      background: rgba(0, 0, 0, 0.7);
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #b0dfff;
+    }
+
+    .section {
+      padding: 2rem;
       text-align: center;
       background: rgba(0, 0, 0, 0.6);
-      margin: 0;
-      transition: background 0.3s ease;
+      margin: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #00bfff;
     }
 
-    section:hover {
-      background: rgba(0, 0, 0, 0.85);
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
 
-    h1, h2, h3 {
-      color: #00f;
-      margin-bottom: 20px;
-    }
-
-    select {
-      padding: 10px;
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
-
-    .project-group {
-      margin-top: 1rem;
-      padding: 1rem;
-      border: 1px solid #444;
-      border-radius: 10px;
-    }
-
-    .project img {
-      width: 200px;
-      margin: 10px;
-      border-radius: 8px;
+    .icon {
+      font-size: 4rem;
+      display: inline-block;
+      margin: 1rem;
+      transition: transform 0.3s ease, color 0.3s ease;
       cursor: pointer;
-      transition: transform 0.3s ease;
     }
 
-    .project img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00f;
+    .icon:hover {
+      transform: scale(1.2) rotate(5deg);
+      color: #ffffff;
+      text-shadow: 0 0 15px #00bfff;
     }
 
-    #popup {
+    .eyes {
       position: fixed;
-      display: none;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      display: flex;
+      gap: 15px;
     }
 
-    #popup img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 12px;
+    .eye {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background: #000;
+      border: 2px solid #00bfff;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .pupil {
+      width: 12px;
+      height: 12px;
+      background: #00bfff;
+      border-radius: 50%;
+      position: absolute;
+      top: 9px;
+      left: 9px;
+      transition: all 0.1s ease;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: #ccc;
+      background: rgba(0, 0, 0, 0.8);
+      margin-top: 4rem;
+    }
+
+    a {
+      color: #00bfff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-shadow: 0 0 10px #00bfff;
     }
   </style>
 </head>
 <body>
-<canvas id="stars"></canvas>
+  <div class="animated-bg"></div>
 
-<section id="home">
-  <h1>Benvenuto nel mio Portfolio</h1>
-</section>
-
-<section id="competenze">
-  <h2>Competenze</h2>
-  <p>Blender, Photoshop, Illustrator, After Effects, Premiere</p>
-</section>
-
-<section id="progetti">
-  <h2>Progetti</h2>
-  <label for="software-select">Scegli un software:</label>
-  <select id="software-select" onchange="showProjects()">
-    <option value="">-- Seleziona --</option>
-    <option value="blender">Blender</option>
-    <option value="photoshop">Photoshop</option>
-    <option value="illustrator">Illustrator</option>
-    <option value="aftereffects">After Effects</option>
-    <option value="premiere">Premiere</option>
-  </select>
-  <div id="projects-container">
-    <div class="project-group" id="blender-projects" style="display: none;">
-      <h3>Progetti realizzati con Blender</h3>
-      <div class="project"><img src="spherelumsimg.jpg" alt="Spherelums" onclick="showPopup('spherelumsvdo.gif')"></div>
-      <div class="project"><img src="tazzinaimg.jpg" alt="Tazzina" onclick="showPopup('tazzinavdo.gif')"></div>
-      <div class="project"><img src="rubikimg.jpg" alt="Rubik" onclick="showPopup('rubikvdo.gif')"></div>
-      <div class="project"><img src="magicimg.jpg" alt="Magic" onclick="showPopup('magicvdo.gif')"></div>
-      <div class="project"><img src="pallaimg.jpg" alt="Palla" onclick="showPopup('pallavdo.gif')"></div>
-      <div class="project"><img src="wtrimg.jpg" alt="Wtr" onclick="showPopup('wtrvdo.gif')"></div>
-    </div>
-    <div class="project-group" id="photoshop-projects" style="display: none;"><h3>Progetti Photoshop</h3></div>
-    <div class="project-group" id="illustrator-projects" style="display: none;"><h3>Progetti Illustrator</h3></div>
-    <div class="project-group" id="aftereffects-projects" style="display: none;"><h3>Progetti After Effects</h3></div>
-    <div class="project-group" id="premiere-projects" style="display: none;"><h3>Progetti Premiere</h3></div>
+  <div class="eyes">
+    <div class="eye"><div class="pupil"></div></div>
+    <div class="eye"><div class="pupil"></div></div>
   </div>
-</section>
 
-<section id="contatti">
-  <h2>Contatti</h2>
-  <p>Email: esempio@email.com</p>
-</section>
+  <header>
+    <h1>KanekiGhoul-dev</h1>
+    <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
+  </header>
 
-<div id="popup" onclick="hidePopup()">
-  <img id="popup-img" src="" alt="Animazione progetto">
-</div>
+  <div class="section">
+    <h2>Chi Sono</h2>
+    <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
+  </div>
 
-<script>
-  const canvas = document.getElementById('stars');
-  const ctx = canvas.getContext('2d');
-  let stars = [];
-  const numStars = 100;
-  let mouse = { x: 0, y: 0 };
+  <div class="section">
+    <h2>Competenze</h2>
+    <span class="icon">👽</span>
+    <span class="icon">🛸</span>
+    <span class="icon">✨</span>
+    <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali</p>
+  </div>
 
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  <div class="section">
+    <h2>Contatti</h2>
+    <p>Email: kanekighoul.dev@galaxy.net</p>
+    <p>GitHub: <a href="https://github.com/KanekiGhoul-dev" target="_blank">KanekiGhoul-dev</a></p>
+  </div>
 
-  for (let i = 0; i < numStars; i++) {
-    stars.push({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      radius: Math.random() * 1.5,
-      vx: 0,
-      vy: 0
+  <footer>
+    © 2025 KanekiGhoul-dev. Tutti i diritti riservati intergalatticamente.
+  </footer>
+
+  <script>
+    const pupils = document.querySelectorAll(".pupil");
+
+    document.addEventListener("mousemove", (e) => {
+      pupils.forEach(pupil => {
+        const rect = pupil.parentElement.getBoundingClientRect();
+        const x = e.clientX - rect.left - rect.width / 2;
+        const y = e.clientY - rect.top - rect.height / 2;
+        pupil.style.transform = `translate(${x / 10}px, ${y / 10}px)`;
+      });
     });
-  }
-
-  window.addEventListener('mousemove', e => {
-    mouse.x = e.clientX;
-    mouse.y = e.clientY;
-  });
-
-  function animateStars() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    for (let star of stars) {
-      let dx = star.x - mouse.x;
-      let dy = star.y - mouse.y;
-      let dist = Math.sqrt(dx*dx + dy*dy);
-      if (dist < 100) {
-        let force = (100 - dist) / 100;
-        let angle = Math.atan2(dy, dx);
-        star.vx += Math.cos(angle) * force;
-        star.vy += Math.sin(angle) * force;
-      }
-      star.vx *= 0.95;
-      star.vy *= 0.95;
-      star.x += star.vx;
-      star.y += star.vy;
-      ctx.beginPath();
-      ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
-      ctx.fillStyle = 'white';
-      ctx.fill();
-    }
-    requestAnimationFrame(animateStars);
-  }
-  animateStars();
-
-  function showProjects() {
-    const software = document.getElementById('software-select').value;
-    document.querySelectorAll('.project-group').forEach(group => group.style.display = 'none');
-    if (software) {
-      document.getElementById(`${software}-projects`).style.display = 'block';
-    }
-  }
-
-  function showPopup(src) {
-    const popup = document.getElementById("popup");
-    const popupImg = document.getElementById("popup-img");
-    popupImg.src = src;
-    popup.style.display = "flex";
-  }
-
-  function hidePopup() {
-    document.getElementById("popup").style.display = "none";
-    document.getElementById("popup-img").src = "";
-  }
-</script>
+  </script>
 </body>
 </html>
