--- a/index.html
+++ b/index.html
@@ -6,38 +6,31 @@
   <title>Portfolio di Elia Giordano</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
       font-family: 'Orbitron', sans-serif;
-      background: #000;
       color: #00bfff;
-      overflow-x: hidden;
-      position: relative;
+      background: #000;
     }
 
-    .animated-bg {
+    canvas {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
-      background-size: 600% 600%;
-      animation: gradientMove 20s ease infinite;
       z-index: -1;
     }
 
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    header {
+    header, .section, footer {
+      position: relative;
+      z-index: 1;
       text-align: center;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.7);
+      padding: 2rem;
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #00bfff;
     }
 
     header h1 {
@@ -45,23 +38,15 @@
       margin-bottom: 0.5rem;
     }
 
-    header p {
+    header p, .section p, footer {
       font-size: 1.2rem;
       color: #b0dfff;
-    }
-
-    .section {
-      padding: 2rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      margin: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 0 15px #00bfff;
     }
 
     .section h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
+      color: #00bfff;
     }
 
     .icon {
@@ -78,14 +63,6 @@
       text-shadow: 0 0 15px #00bfff;
     }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #ccc;
-      background: rgba(0, 0, 0, 0.8);
-      margin-top: 4rem;
-    }
-
     a {
       color: #00bfff;
       text-decoration: none;
@@ -97,7 +74,8 @@
   </style>
 </head>
 <body>
-  <div class="animated-bg"></div>
+
+  <canvas id="bg"></canvas>
 
   <header>
     <h1>Elia Giordano</h1>
@@ -133,5 +111,48 @@
   <footer>
     © 2025 Elia Giordano. Tutti i diritti riservati.
   </footer>
+
+  <!-- Three.js via CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
+  <script>
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('bg'), alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+
+    // Cube
+    const geometry = new THREE.BoxGeometry(3, 3, 3);
+    const material = new THREE.MeshStandardMaterial({ color: 0x00bfff, emissive: 0x00bfff, metalness: 0.8, roughness: 0.2 });
+    const cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
+
+    // Light
+    const pointLight = new THREE.PointLight(0xffffff, 2);
+    pointLight.position.set(10, 10, 10);
+    scene.add(pointLight);
+
+    const ambientLight = new THREE.AmbientLight(0x404040);
+    scene.add(ambientLight);
+
+    camera.position.z = 10;
+
+    // Animate
+    function animate() {
+      requestAnimationFrame(animate);
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+      renderer.render(scene, camera);
+    }
+
+    animate();
+
+    // Resize
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
